<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_login_logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dip" >

        <AutoCompleteTextView
            android:id="@+id/login_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_login_account"
            android:drawablePadding="10dip"
            android:ems="10"
            android:hint="@string/login_account_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:drawableLeft="@drawable/icon_login_pass"
            android:drawablePadding="10dip"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dip"
            android:background="@drawable/btn_style_login"
            android:enabled="false"
            android:padding="10dip"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/space_15" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="tips:"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请使用Git@OSC的push邮箱和密码登录"
                android:layout_marginLeft="15dip"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:autoLink="web"
                android:layout_marginLeft="15dip"
                android:text="注册请前往https://git.oschina.net"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>